--- a/style.css
+++ b/style.css
@@ -314,6 +314,14 @@ nav ul li a.contact-button:hover {
   font-weight: bold;
   font-size: 50px;
   color: #4A6EB1;
+}
+
+#projects h2 {
+  text-align: center;
+  margin-top: 15px;
+}
+
+#services h2 {
   margin: 50px;
 }
 
